--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -85,16 +85,17 @@ jobs:
             exit 1
           fi
           
-          # Save validated key to workspace for SSH actions to use
-          DEPLOY_KEY="${{ github.workspace }}/.github_ssh_key"
-          cp "$TEMP_KEY" "$DEPLOY_KEY"
-          # Set permissions: 644 allows Docker container to read it (600 is too restrictive)
-          chmod 644 "$DEPLOY_KEY"
+          # Save validated key to workspace for SSH actions to use (use relative path for Docker)
+          DEPLOY_KEY=".github_ssh_key"
+          cp "$TEMP_KEY" "${{ github.workspace }}/$DEPLOY_KEY"
+          # Set permissions: 644 allows Docker container to read it
+          chmod 644 "${{ github.workspace }}/$DEPLOY_KEY"
           rm -f "$TEMP_KEY"
           echo "✓ SSH key format is valid and saved for use"
-          echo "SSH_KEY_PATH=$DEPLOY_KEY" >> $GITHUB_ENV
+          # Export just the filename for Docker container
+          echo "SSH_KEY_FILE=$DEPLOY_KEY" >> $GITHUB_ENV
           # Verify file is accessible
-          ls -la "$DEPLOY_KEY"
+          ls -la "${{ github.workspace }}/$DEPLOY_KEY"
           ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> $HOME/.ssh/known_hosts 2>/dev/null || true
 
       - name: Test SSH Connection
@@ -102,7 +103,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key_path: ${{ env.SSH_KEY_PATH }}
+          key_path: ${{ env.SSH_KEY_FILE }}
           port: 22
           timeout: 60s
           script: |
@@ -113,7 +114,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key_path: ${{ env.SSH_KEY_PATH }}
+          key_path: ${{ env.SSH_KEY_FILE }}
           source: "web/dist/*"
           target: "/var/www/tlp-web"
 
@@ -122,7 +123,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key_path: ${{ env.SSH_KEY_PATH }}
+          key_path: ${{ env.SSH_KEY_FILE }}
           port: 22
           timeout: 60s
           script: |
