--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -32,31 +32,18 @@ jobs:
         run: npm test || true
         continue-on-error: true
 
-      - name: Prepare SSH Key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_B64 }}" | base64 -d > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
-          echo "Key file created:"
-          ls -la ~/.ssh/deploy_key
-          file ~/.ssh/deploy_key
-          ssh-keygen -l -f ~/.ssh/deploy_key || echo "Key validation failed"
-          ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
-          echo "Testing direct SSH..."
-          ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o BatchMode=yes ${{ secrets.DROPLET_USER }}@${{ secrets.DROPLET_HOST }} "echo 'Direct SSH works'" || echo "Direct SSH failed"
-
       - name: Deploy to Droplet
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key_path: $HOME/.ssh/deploy_key
+          key: ${{ secrets.DROPLET_SSH_KEY }}
           port: 22
           timeout: 60s
           script: |
             echo "🚀 Starting API deployment..."
             cd /opt/tlp/api || exit 1
-            git pull origin main || echo "Git pull skipped - using uploaded files"
+            git pull origin main || echo "Git pull skipped"
             npm ci --production
             npm run migrate || true
             pm2 restart tlp-api || pm2 start /opt/tlp/deployment/pm2.ecosystem.config.js --env production
