Add automatic repository cloning for first-time deployment on droplet

--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -50,9 +50,20 @@ jobs:
           timeout: 60s
           script: |
             echo "🚀 Deploying admin frontend..."
-            cd /opt/tlp
-            git pull origin main || echo "Git pull skipped"
-            cd api/admin
+            echo "📁 Ensuring directory structure..."
+            mkdir -p /opt/tlp
+            if [ ! -d "/opt/tlp/.git" ]; then
+              echo "📥 Cloning repository (first time setup)..."
+              if [ -d "/opt/tlp" ] && [ "$(ls -A /opt/tlp 2>/dev/null)" ]; then
+                echo "⚠️ /opt/tlp exists but is not a git repo. Backing up and cloning..."
+                sudo mv /opt/tlp /opt/tlp.backup.$(date +%s) 2>/dev/null || true
+              fi
+              git clone https://github.com/Shahid-Yaseen/TLP.git /opt/tlp || { echo "❌ Failed to clone repository"; exit 1; }
+            fi
+            cd /opt/tlp || { echo "❌ Failed to change to /opt/tlp"; exit 1; }
+            echo "📥 Pulling latest changes..."
+            git pull origin main || echo "⚠️ Git pull skipped"
+            cd api/admin || { echo "❌ Failed to change to api/admin directory"; exit 1; }
             npm ci
             REACT_APP_API_URL=${{ secrets.API_URL }} npm run build
             sudo rm -rf /var/www/tlp-admin/*
