--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -7,35 +7,35 @@ upstream api_backend {
     keepalive 64;
 }
 
-# HTTP Server - Redirect to HTTPS
+# HTTP Server - Works with IP address or domain
 server {
     listen 80;
     listen [::]:80;
-    server_name _;
+    server_name _ 143.110.146.177;  # Your droplet IP and any domain
 
-    # For Let's Encrypt verification
+    # For Let's Encrypt verification (if you set up SSL later)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirect all other traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
+    # Uncomment below to redirect to HTTPS when using domain with SSL
+    # For IP access, keep this commented out
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
 
-# HTTPS Server
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name _;
+# HTTPS Server (Optional - uncomment when you have SSL certificate)
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
+#     server_name your-domain.com;  # Replace with your domain
 
-    # SSL Configuration (Let's Encrypt)
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
+#     # SSL Configuration (Let's Encrypt)
+#     ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
+#     ssl_prefer_server_ciphers on;
 
     # Security Headers
     add_header X-Frame-Options "SAMEORIGIN" always;
